(library
 (name day01)
 (inline_tests)
 (modules day01)
 (libraries sexplib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_expect ppx_sexp_conv)))

(library
 (name day02)
 (inline_tests)
 (modules day02)
 (libraries sexplib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_expect ppx_sexp_conv)))

(library
 (name day03)
 (inline_tests)
 (modules day03)
 (libraries angstrom sexplib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_expect ppx_sexp_conv)))

(library
 (name day04)
 (inline_tests)
 (modules day04)
 (libraries sexplib)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_expect
   ppx_enumerate
   ppx_sexp_conv)))

(executable
 (name main)
 (public_name aoc)
 (modules main)
 (libraries day04))
